# flysight-viewer-qt

./: .clang-format  CMakeLists.txt  README.md  conanfile.txt  fmt.sh
src/: CMakeLists.txt  FlySightViewer.pro  acroform.cpp  acroform.h  acroscoring.cpp  acroscoring.h  colorcombobox.cpp  colorcombobox.h  common.cpp  common.h  conanfile.txt  config.cpp  config.h  configdialog.cpp  configdialog.h  dataplot.cpp  dataplot.h  datapoint.cpp  datapoint.h  dataview.cpp  dataview.h  flareform.cpp  flareform.h  flarescoring.cpp  flarescoring.h  genome.cpp  genome.h  geographicutil.cpp  geographicutil.h  importworker.cpp  importworker.h  liftdragplot.cpp  liftdragplot.h  logbookview.cpp  logbookview.h  main.cpp  mainwindow.cpp  mainwindow.h  mapcore.h  mapview.cpp  (+46 more)
src/QCustomPlot/: qcustomplot.cpp  qcustomplot.h
